--- a/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.css
+++ b/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.css
@@ -72,7 +72,7 @@
       align-items: center;
       font-size: 1.8em;
       font-weight: bold; }
-      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      @media all and (-ms-high-contrast: none), (forced-colors: active) {
         .swal2-popup.swal2-toast .swal2-icon .swal2-icon-content {
           font-size: .25em; } }
     .swal2-popup.swal2-toast .swal2-icon.swal2-success .swal2-success-ring {
@@ -224,7 +224,7 @@
     transition: none !important; }
   .swal2-container:not(.swal2-top):not(.swal2-top-start):not(.swal2-top-end):not(.swal2-top-left):not(.swal2-top-right):not(.swal2-center-start):not(.swal2-center-end):not(.swal2-center-left):not(.swal2-center-right):not(.swal2-bottom):not(.swal2-bottom-start):not(.swal2-bottom-end):not(.swal2-bottom-left):not(.swal2-bottom-right):not(.swal2-grow-fullscreen) > .swal2-modal {
     margin: auto; }
-  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  @media all and (-ms-high-contrast: none), (forced-colors: active) {
     .swal2-container .swal2-modal {
       margin: 0 !important; } }
 
@@ -714,7 +714,7 @@
   .swal2-range output {
     display: none; } }
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (-ms-high-contrast: none), (forced-colors: active) {
   .swal2-range input {
     width: 100% !important; }
   .swal2-range output {
